--- a/Blog.html
+++ b/Blog.html
@@ -1,9 +1,9 @@
 <div class="col">
     <div class="card shadow-sm">
-      <img src="https://img.youtube.com/vi/n9defOwVWS8/maxresdefault.jpg" alt="preview" class="content">
+      <img src="https://img.youtube.com/vi/lrk4oY7UxpQ/maxresdefault.jpg" alt="preview" class="content">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center">
-          <h4></h4>
+          <h4>Introduction: Crash Course U.S. Government and Politics</h4>
           <div class="btn-group">
             <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
           </div>
@@ -11,3 +11,74 @@
       </div>
     </div>
   </div>
+
+  <div class="col">
+    <div class="card shadow-sm">
+      <img src="https://img.youtube.com/vi/n9defOwVWS8/maxresdefault.jpg" alt="preview" class="content">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h4>The Bicameral Congress: Crash Course Government and Politics</h4>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card shadow-sm">
+      <img src="https://img.youtube.com/vi/0bf3CwYCxXw/maxresdefault.jpg" alt="preview" class="content">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h4>Separation of Powers and Checks and Balances: Crash Course Government and Politics</h4>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card shadow-sm">
+      <img src="https://img.youtube.com/vi/J0gosGXSgsI/maxresdefault.jpg" alt="preview" class="content">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h4>Federalism: Crash Course Government and Politics</h4>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card shadow-sm">
+      <img src="https://img.youtube.com/vi/kCCmuftyj8A/maxresdefault.jpg" alt="preview" class="content">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h4>Constitutional Compromises: Crash Course Government and Politics</h4>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="card shadow-sm">
+      <img src="https://img.youtube.com/vi/qxiD9AEX4Hc/maxresdefault.jpg" alt="preview" class="content">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+          <h4>Congressional Elections: Crash Course Government and Politics</h4>
+          <div class="btn-group">
+            <button type="button" class="btn btn-sm btn-outline-secondary">Read Blog</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
